added html interface

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script> src="/script.js"</script>
+    <script> src="./script.js"</script>
 </head>
 
 
 <body>
+    <h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
+    <button id="play" onclick="game();">Click to play!</button>
+    <p id="result"></p>
+    
+
     
 </body>
 </html>
