--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script> src="./script.js"</script>
+    
 </head>
 
 
@@ -14,6 +14,7 @@
     <button id="play" onclick="game();">Click to play!</button>
     <p id="result"></p>
     
+    <script> src="script.js"</script>
 
 </body>
 </html>
