fixed script link

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1 class="title">Let's Play Rock, Paper, Scissors!</h1>
     <button id="play" onclick="game();">Click to play!</button>
     <p id="result"></p>
-    
-    <script> src="script.js"</script>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
