--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 
@@ -45,13 +45,15 @@
     </div>
     
     
-
+    <div id="overlay"></div> 
     <div id="endScreen">
-        <p>Game Over</p>
+        <p id="game-over">Game Over</p>
+        <div id="playerScore2"></div>
+        <div id="compScore2"></div>
         <button id="restart">Restart Game</button>
     </div>
 
-    <div id="overlay"></div>
+   
 
 
 
